--- a/templates/relatorios-despesas.html
+++ b/templates/relatorios-despesas.html
@@ -74,18 +74,17 @@
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                    aria-expanded="true" aria-controls="collapseUtilities">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilitiesRelatorios"
+                    aria-expanded="true" aria-controls="collapseUtilitiesRelatorios">
                     <i class="fas fa-dollar-sign"></i>
                     <span>💰 Gestão Financeira</span>
                 </a>
-                <div id="collapseUtilities" class="collapse show" aria-labelledby="headingUtilities"
+                <div id="collapseUtilitiesRelatorios" class="collapse show" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Gerencie suas Finanças:</h6>
                         <a class="collapse-item" href="{{ url_for('cadastrar_despesa') }}">Cadastrar Despesa</a>
                         <a class="collapse-item" href="{{ url_for('visualizar_despesas') }}">Visualizar Despesas</a>
-                        <a class="collapse-item active" href="{{ url_for('relatorios_despesas') }}">Relatórios Financeiros</a>
                     </div>
                 </div>
             </li>
@@ -100,12 +99,12 @@
 
             <!-- Nav Item - Reports Collapse Menu -->
             <li class="nav-item active">
-                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseReports"
-                    aria-expanded="true" aria-controls="collapseReports">
+                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseReportsRelatorios"
+                    aria-expanded="true" aria-controls="collapseReportsRelatorios">
                     <i class="fas fa-chart-line"></i>
                     <span>Relatórios</span>
                 </a>
-                <div id="collapseReports" class="collapse show" aria-labelledby="headingReports"
+                <div id="collapseReportsRelatorios" class="collapse show" aria-labelledby="headingReports"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Análises e Relatórios:</h6>
@@ -498,7 +497,7 @@
     <script src="{{ url_for('static', filename='js/sb-admin-2.min.js') }}"></script>
 
     <!-- Plotly.js -->
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-3.1.0.min.js"></script>
 
     <!-- Page level custom scripts -->
     <script>
