--- a/templates/view-routes.html
+++ b/templates/view-routes.html
@@ -74,19 +74,17 @@
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                    aria-expanded="true" aria-controls="collapseUtilities">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilitiesViewRoutes"
+                    aria-expanded="true" aria-controls="collapseUtilitiesViewRoutes">
                     <i class="fas fa-dollar-sign"></i>
                     <span>💰 Gestão Financeira</span>
                 </a>
-                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
+                <div id="collapseUtilitiesViewRoutes" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Gerencie suas Finanças:</h6>
                         <a class="collapse-item" href="{{ url_for('cadastrar_despesa') }}">Cadastrar Despesa</a>
                         <a class="collapse-item" href="{{ url_for('visualizar_despesas') }}">Visualizar Despesas</a>
-                        <a class="collapse-item" href="{{ url_for('relatorios_despesas') }}">Relatórios Financeiros</a>
-                        <a class="collapse-item" href="#">Fluxo de Caixa</a>
                     </div>
                 </div>
             </li>
@@ -101,12 +99,12 @@
 
             <!-- Nav Item - Analytics Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseAnalytics"
-                    aria-expanded="true" aria-controls="collapseAnalytics">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseAnalyticsViewRoutes"
+                    aria-expanded="true" aria-controls="collapseAnalyticsViewRoutes">
                     <i class="fas fa-chart-line"></i>
                     <span>Relatórios e Analytics</span>
                 </a>
-                <div id="collapseAnalytics" class="collapse" aria-labelledby="headingAnalytics" data-parent="#accordionSidebar">
+                <div id="collapseAnalyticsViewRoutes" class="collapse" aria-labelledby="headingAnalytics" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Relatórios:</h6>
                         <a class="collapse-item" href="#">Relatórios de Rotas</a>
@@ -128,12 +126,12 @@
 
             <!-- Nav Item - Settings Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSettings"
-                    aria-expanded="true" aria-controls="collapseSettings">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSettingsViewRoutes"
+                    aria-expanded="true" aria-controls="collapseSettingsViewRoutes">
                     <i class="fas fa-cog"></i>
                     <span>Configurações</span>
                 </a>
-                <div id="collapseSettings" class="collapse" aria-labelledby="headingSettings" data-parent="#accordionSidebar">
+                <div id="collapseSettingsViewRoutes" class="collapse" aria-labelledby="headingSettings" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Sistema:</h6>
                         <a class="collapse-item" href="#">Perfil do Usuário</a>
