--- a/templates/backup-dados.html
+++ b/templates/backup-dados.html
@@ -105,12 +105,12 @@
 
         <!-- Nav Item - Settings Collapse Menu -->
         <li class="nav-item active">
-            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSettings"
-                aria-expanded="true" aria-controls="collapseSettings">
+            <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseSettingsBackup"
+                    aria-expanded="true" aria-controls="collapseSettingsBackup">
                 <i class="fas fa-cog"></i>
                 <span>Configurações</span>
             </a>
-            <div id="collapseSettings" class="collapse show" aria-labelledby="headingSettings" data-parent="#accordionSidebar">
+            <div id="collapseSettingsBackup" class="collapse show" aria-labelledby="headingSettings" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
                     <h6 class="collapse-header">Sistema:</h6>
                     <a class="collapse-item" href="{{ url_for('perfil') }}">Perfil do Usuário</a>
