--- a/templates/cadastrar-despesa.html
+++ b/templates/cadastrar-despesa.html
@@ -99,12 +99,12 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
-                    aria-expanded="true" aria-controls="collapsePages">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePagesCadastrar"
+                    aria-expanded="true" aria-controls="collapsePagesCadastrar">
                     <i class="fas fa-fw fa-folder"></i>
                     <span>Menu</span>
                 </a>
-                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                <div id="collapsePagesCadastrar" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Sistema:</h6>
                         <a class="collapse-item" href="{{ url_for('login') }}">Login</a>
@@ -155,12 +155,12 @@
 
             <!-- Nav Item - Settings Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSettings"
-                    aria-expanded="true" aria-controls="collapseSettings">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSettingsCadastrar"
+                    aria-expanded="true" aria-controls="collapseSettingsCadastrar">
                     <i class="fas fa-cog"></i>
                     <span>Configurações</span>
                 </a>
-                <div id="collapseSettings" class="collapse" aria-labelledby="headingSettings" data-parent="#accordionSidebar">
+                <div id="collapseSettingsCadastrar" class="collapse" aria-labelledby="headingSettings" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Sistema:</h6>
                         <a class="collapse-item" href="{{ url_for('perfil') }}">Perfil do Usuário</a>
