--- a/templates/visualizar-despesas.html
+++ b/templates/visualizar-despesas.html
@@ -129,12 +129,12 @@
 
             <!-- Nav Item - Settings Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSettings"
-                    aria-expanded="true" aria-controls="collapseSettings">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSettingsVisualizar"
+                    aria-expanded="true" aria-controls="collapseSettingsVisualizar">
                     <i class="fas fa-cog"></i>
                     <span>Configurações</span>
                 </a>
-                <div id="collapseSettings" class="collapse" aria-labelledby="headingSettings" data-parent="#accordionSidebar">
+                <div id="collapseSettingsVisualizar" class="collapse" aria-labelledby="headingSettings" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Sistema:</h6>
                         <a class="collapse-item" href="#">Perfil do Usuário</a>
