--- a/templates/routes.html
+++ b/templates/routes.html
@@ -84,6 +84,8 @@
                         <h6 class="collapse-header">Gerencie suas Finanças:</h6>
                         <a class="collapse-item" href="{{ url_for('cadastrar_despesa') }}">Cadastrar Despesa</a>
                         <a class="collapse-item" href="{{ url_for('visualizar_despesas') }}">Visualizar Despesas</a>
+                        <a class="collapse-item" href="{{ url_for('cadastrar_pacotes_assistentes') }}">Pacotes Assistentes</a>
+                        <a class="collapse-item" href="{{ url_for('visualizar_pacotes_assistentes') }}">Ver Pacotes Assistentes</a>
                     </div>
                 </div>
             </li>
