--- a/templates/visualizar-despesas.html
+++ b/templates/visualizar-despesas.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Visualizar Despesas</title>
+    <title>Suas Rotas - Visualizar Despesas</title>
 
     <!-- Custom fonts for this template -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" type="text/css">
